--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 i2cdev = "0.5.1"
 nats = "0.23.1"
+time = { version = "0.3", features = ["serde", "local-offset"]}
+serde = "1.0.150"
+serde_json = "1.0.89"
